--- a/FarmSystem.Test1/FarmSystem.Test.csproj
+++ b/FarmSystem.Test1/FarmSystem.Test.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>FarmSystem.Test1</RootNamespace>
     <AssemblyName>FarmSystem.Test1</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -53,7 +53,9 @@
   <ItemGroup>
     <Compile Include="Cow.cs" />
     <Compile Include="EmydexFarmSystem.cs" />
+    <Compile Include="FarmAnimal.cs" />
     <Compile Include="Horse.cs" />
+    <Compile Include="IFarmAnimal.cs" />
     <Compile Include="IMilkableAnimal.cs" />
     <Compile Include="Sheep.cs" />
     <Compile Include="Hen.cs" />
